--- a/Parcial2Lfms/CpParcial2Lfms/Programa.resx
+++ b/Parcial2Lfms/CpParcial2Lfms/Programa.resx
@@ -1242,4 +1242,7 @@
   <metadata name="erpfechaEstreno.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>596, 17</value>
   </metadata>
+  <metadata name="erpTipo.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>735, 17</value>
+  </metadata>
 </root>
